# formations

./: .flake8  .gitignore  Makefile  formation.cls  formation.sty  funcs.zsh  global-config.yml  pyproject.toml  requirements.txt  settings.yml
anaconda-install/: Anaconda3-2019.10-Linux-x86_64.sh.REMOVED.git-id
assets/manim/: lda.py
biblio/: url.lst
code-illustration/: addlayer-template.py  gridsearch-template.py  pandas_7.py  python-blocs.py  python-blocs.txt  tf-keras-custom-layer.py  tf-keras-mlp.py  tf-keras-save-config.py  tf-load_models.py  tf-regression_lineaire-0.tex
code-illustration/regex/: demo-findall.output  demo-finditer.output  demo-finditer.py  demo-groups.output  demo-groups.py  demo-intro-match.output  demo-intro-match.py  demo-intro-search.output  demo-pattern-brut.output  demo-pattern-brut.py  demo-pattern-compile-flag-ignorecase.output  demo-pattern-compile-flag-verbose.py  demo-pattern-compile-flag.output  demo-replace.output  demo-search.py  demo-special-character.output  demo-split.py  demo-str-lit-brut.output  demo-str-lit-brut.py
code-illustration/tf-keras/: create_graph_placeholder.py  evaluate.py  keras-callbacks.py  keras-configurelayer.py  keras-predict.py  keras-print-model.output  keras-print-model.py  learn.py  load_models.output  regression_lineaire_run.output  rnn.py  save_models.py
eni/: company-config.yml  qualiopi-modif-objectif.txt
eni/cv3/: deck-config.yml  targets.yml
eni/ml-5J/: deck-config.yml  targets.yml
eni/ml-vue-d-ensemble-1J/: deck-config.yml  targets.yml
eni/ml1/: deck-config.yml  program.md  targets.yml
eni/ml5/: deck-config.yml  targets.yml
figures/plots/: auc.py  data_augmentation.py  data_science.py  exploration.py  gaussian_mixture_univariate.py  gradient_descent.py  learning_curve.py  ml_effort_vs_value.py  multivariate_regression.py  nonlinear_kernel_svm.py  nvidia_stock_history.py  overfit_polynomial.py  overfitting.py  polynomial_regression.py  residuals.py  slope.py  utils.py
figures/plt/: pyproject.toml
figures/plt/plots/: data_augmentation.py  exploration.py  gaussian_mixture_univariate.py  gradient_descent.py  learning_curve.py  multivariate_regression.py  nvidia_stock_history.py  overfit-polynomial.py  overfit_polynomial.py  overfitting.py  polynomial_regression.py  residuals.py  slope.py  utils.py
figures/plt/plots/data/stock-prices/: BTC-USD.csv  ETH-USD.csv  NVDA.csv
figures/plt/plots/mpl/: anatomy-en.py  anatomy.py  bar.py  boxplot.py  fill-between.py  hist.py  imshow.py  legend-en.py  legend.py  parameters.py  scales.py  scatter.py  simple.py
figures/tikz/: tf-graph.tex
img/: HMMGraph.pdf_tex  HMMLearn.pdf_tex  HMMSC.pdf_tex  case-law-analytics  chaine_markov2.pdf_tex
jinja2/: deckz_main_template.tex.jinja2  main.tex.jinja2  v1.tex.jinja2
mlambda/: company-config.yml
mlambda/CDL/: Cadrage.txt
mlambda/catalogue/: Big data - Data Clustering, organiser les données du Big data.json  Big data - Data Clustering, organiser les données du Big data.yml  Big data, enjeux et apports du Big data.json  Big data, enjeux et apports du Big data.yml  Deep Learning - Expertise.json  Deep Learning - Expertise.yml  Deep Learning - Initiation.json  Deep Learning - Initiation.odt  Deep Learning - Initiation.yml  Deep Learning - Maitrise.json  (+13 more)
orsys/: ITEMS.tp  TODO.demo  company-config.yml  formations.lst  ordre-formation-cycle-certifiant-data-scientist.txt  ordre-formation-cycle-certifiant-ml-deep.txt
profind/: company-config.yml
programs/: DRN-specifique-vision.md  Makefile  big-models.md  gnn.md  ia-sparks.md  iao-1j.md  ml-on-code.md  mlflow-dvc.md  nlp-expert.md  nlp-fromscratch.md  nlp-turfu-standalone.md  nlp-turfu.md  profind-python-dev.md  rl.md  sparks-intro-ml.md  tf-sparks.md  time-series.md  vision-expert.md  vision-fromscratch.md  vision-turfu-standalone.md  vision-turfu.md
script/: copy-img.sh  copy-tex.sh  make-dir-formation.sh
shared/: code
shared/img/: .yml  (+161 more)
sparks/: company-config.yml
sparks-formation/: company-config.yml
stys/: Ball.sty  Box.sty  RightBandedBox.sty  RightBandedBoxNoBand.sty  formation.sty
templates/: subsection.tex  targets.yml
update-images/: all-png.lst  image-instruction.lst  pouet.lst  run.py  search-img.py
(+3045 files in other folders)
