[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>", "fmg", "nyx"]
description = "Slide decks managed by deckz."
homepage = "https://github.com/m09/formations"
license = "Apache-2.0"
name = "formations"
version = "1.0.0"

[tool.poetry.dependencies]
Pygments = "^2.13.0"
deckz = "^18.2.0"
plots = {path = "figures/plt", develop = true}
python = ">= 3.8.1, < 3.11"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
flake8-bugbear = "^22.10.27"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.991"
pylint = "^2.15.7"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
