[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>", "fmg", "nyx"]
description = "Slide decks managed by deckz."
homepage = "https://github.com/m09/formations"
license = "Apache-2.0"
name = "formations"
version = "1.0.0"

[tool.poetry.dependencies]
Pygments = "^2"
deckz = ">= 19.0.1"
plots = {path = "figures/plt", develop = true}
python = ">= 3.8.1, < 3.11"

[tool.poetry.group.dev.dependencies]
black = "^23"
flake8 = "^6"
flake8-bugbear = "^23"
flake8-docstrings = "^1"
isort = "^5"
mypy = "^1"
pylint = "^2.17.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
