[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>", "fmg", "nyx"]
description = "Slide decks managed by deckz."
homepage = "https://github.com/m09/formations"
include = ["figures/plots/data/**/*"]
license = "Apache-2.0"
name = "formations"
packages = [{include = "plots", from = "figures"}]
version = "1.0.0"

[tool.poetry.dependencies]
Pillow = "^9"
Pygments = "^2"
matplotlib = "^3"
pandas = "^1"
python = ">= 3.8.1, < 3.11"
scikit-learn = "^1"
scipy = "^1"
seaborn = "^0.12"
tensorflow = "^2.12"
wikipedia = "^1"
wordcloud = "^1"
deckz = "^20.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23"
flake8 = "^6"
isort = "^5"
mypy = "^1"

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
