[tool.poetry]
authors = ["mlambda <142691+m09@users.noreply.github.com>"]
description = ""
include = ["data/**/*"]
name = "plots"
version = "0.1.0"

[tool.poetry.dependencies]
Pillow = "^9.0.1"
matplotlib = "^3.5.1"
pandas = "^1.4.1"
python = ">= 3.8, < 3.11"
scikit-learn = "^1.0.2"
scipy = "^1.8.0"
seaborn = "^0.11.2"
tensorflow = "^2.8.0"
wikipedia = "^1.4.0"
wordcloud = "^1.8.1"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.940"
pylint = "^2.12.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
