[tool.poetry]
authors = ["mlambda <142691+m09@users.noreply.github.com>"]
description = ""
include = ["data/**/*"]
name = "plots"
version = "0.1.0"

[tool.poetry.dependencies]
Pillow = "^9.3.0"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
python = ">= 3.8.1, < 3.11"
scikit-learn = "^1.1.3"
scipy = "^1.9.3"
seaborn = "^0.12.1"
tensorflow = "^2.11.0"
wikipedia = "^1.4.0"
wordcloud = "^1.8.2.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
flake8-bugbear = "^22.10.27"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.991"
pylint = "^2.15.7"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
