[tool.poetry]
authors = ["mlambda <142691+m09@users.noreply.github.com>"]
description = ""
include = ["data/**/*"]
name = "plots"
version = "0.1.0"

[tool.poetry.dependencies]
Pillow = "^9"
matplotlib = "^3"
pandas = "^1"
python = ">= 3.8.1, < 3.11"
scikit-learn = "^1"
scipy = "^1"
seaborn = "^0.12"
tensorflow = "^2"
wikipedia = "^1"
wordcloud = "^1"

[tool.poetry.group.dev.dependencies]
black = "^23"
flake8 = "^6"
flake8-bugbear = "^23"
flake8-docstrings = "^1"
isort = "^5"
mypy = "^1"
pylint = "^2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
